# RallyVision

./: .gitignore  .repomixignore  DATAFLOW.md  MISSING_DATA_HANDLING.md  MODEL_TRAINING.md  README.md  README_PROGRESS.md  REFactORED_PIPELINE.md  TRAINING_PIPELINE.md  check_all.py  checks.ipynb  config.toml  court_detector.py  create_annotations.py  create_features.py  create_features_pipeline.py  data_processor.py  detect_points.py  draw.py  draw_10min_segments.py  draw_all.py  evaluate.py  example_data_processor.py  execute_segmentation.py  extract_all.py  filter_pose_data.py  heuristic_processor.py  heuristic_processor_viz.py  inference.ipynb  inference.py  inference_tennis_lstm.py  manual_court.ipynb  manual_court.py  manual_court2.py  model.py  package-lock.json  pose_extractor.py  pose_extractor_optimized.py  prepare_training_data.py  preprocess_data.py  (+34 more)
annotations/: Set (2) Play Uncut Derek vs. Alex.mp4.csv
check/: QUICK_START.md  README.md  demo.py  requirements.txt  run_all_models.py  test_setup.py  yolo_player_detector.py
data_configs/: README.md  config_all_videos.json  config_stepwise.json  config_with_visualization.json  preprocess_annotated.json
data_scripts/: court_detector.py  dataset_creator.py  enhanced_feature_visualizer.py  feature_engineer.py  feature_visualizer.py  pose_extractor.py  run_pipeline.py
docs/: README.md  index.html  script.js  styles.css
frontend/: index.html  script.js  styles.css
logs/: test_results.json  training_history.json
md_files/: DATAFLOW.md  README.md  dataset_creator.md  enhanced_feature_visualizer.md  feature_vector_documentation_verified.md
models/: README.md
old/: check_proportion.ipynb  draw_all.py  draw_filtered_all.py  manual_court2.py
scripts/: build_macos.sh
test_files/: test_all.py  test_comprehensive_features.py  test_data_processor.py  test_filtering_pipeline.py  test_manual_court.py  test_mask_logic.py  test_pipeline.py  test_pose_extractor.py  train_model.py  train_tennis_lstm.py
(+36 files in other folders)
