[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepmatch"
version = "0.1.0"
description = "AI-powered tennis match analysis: CLI and GUI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "torch",
  "ultralytics",
  "opencv-python",
  "av",
  "scipy",
  "tqdm",
  "joblib",
  "Flask>=2.2",
  "Flask-Cors>=3.0",
  "tomli>=2.0.1",
]

[project.optional-dependencies]
train = [
  "scikit-learn",
  "matplotlib",
  "pandas",
]

[project.scripts]
deepmatch = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
