[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rallyvision"
version = "0.1.0"
description = "AI-powered tennis match analysis CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch",
  "ultralytics",
  "opencv-python",
  "av",
  "tqdm",
  "joblib",
  "tomli>=2.0.1",
  "scikit-learn>=1.7.1",
  "Flask>=2.3",
  "flask-cors>=4.0",
]

[project.scripts]
rallyvision = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
